# caerbannog

./: .pre-commit-config.yaml  README.md  context.py  plugin.py  prelude.py  pyproject.toml  settings.py  setup.py  target.py
caerbannog/: command.py  context.py  elevation_type.py  error.py  password.py  plugin.py  prelude.py  secrets.py  settings.py  target.py  template.py  var_loader.py
caerbannog/commandline/: args.py  subcommands.py
caerbannog/logging/: __init__.py  context.py  logger.py
caerbannog/operations/: __init__.py  filesystem.py  operation.py  windows.py
caerbannog/operations/subjects/: __init__.py  file.py  file_tree.py  font.py  group.py  package.py  psget_module.py  registry.py  systemd.py
caerbannog/roles/: prelude.py  role_context.py
commandline/: args.py  subcommands.py
logging/: __init__.py  ansi.py  fmt.py  logger.py
operations/: __init__.py  filesystem.py  host.py  operation.py
operations/subjects/: __init__.py  file.py  file_tree.py  font.py  group.py  package.py  psget_module.py  systemd.py
roles/: prelude.py  role_context.py
tests/: fixtures.py  test_target.py  test_var_loader.py
